--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -22,7 +22,7 @@
     height: 38px;
     outline: none;
     background-color: transparent;
-    border: 4px solid #4FB2EF;
+    border: 4px solid #F21401;
     border-radius: 30px;
     backdrop-filter: blur(20px);
     /* box-shadow: 10px 8px 15px white; */
@@ -33,7 +33,7 @@
     margin-left: 2em;
     outline: none;
     background-color: transparent;
-    border: 4px solid #4FB2EF;
+    border: 4px solid #F21401;
     border-radius: 30px;
     backdrop-filter: blur(20px);
     
@@ -44,7 +44,7 @@
     outline: none;
     font-size: 14px;
     background-color: transparent;
-    border: 4px solid #4FB2EF;
+    border: 4px solid #F21401;
     border-radius: 30px;
     backdrop-filter: blur(20px);
 }
