--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,9 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  color: white;
+  background: #051010;
 }
 ::-webkit-scrollbar{
   display: none;
+}
+input{
+  color: white;
 }
  
 
