--- a/frontend/src/components2/feed/topbar.css
+++ b/frontend/src/components2/feed/topbar.css
@@ -142,3 +142,6 @@
   background: -o-linear-gradient(top, white, black);
   background: linear-gradient(to bottom, white, black);
 }
+input{
+  color:black;
+}
