--- a/frontend/src/components2/feed/feed.css
+++ b/frontend/src/components2/feed/feed.css
@@ -37,7 +37,7 @@
     align-items: center;
     padding: 0px 0 10px 20px;
 }
-.row img{
+.rowimg{
     height: 30px;
     width: 60px;
     filter: invert(1);
@@ -103,7 +103,6 @@ h4{
     height: 40px;
     width: 40px;
     border-radius: 25px;
-    border: 1px solid var(--liteColor);
     background-position: center;
     background-size: cover;
 }
@@ -211,7 +210,10 @@ h4{
     :root {
     --liteColor: rgb(198, 196, 196);
 }
-
+#hidebutton{
+    top: 10px;
+    right: 20px;
+}
 .main {
     width: 100%;
     height: 100vh;
@@ -328,7 +330,7 @@ h4 {
 }
 
 .likeCount {
-    padding-left: 15px; /* Adjusted for mobile */
+    padding-left: 25px; /* Adjusted for mobile */
     font-size: 12px; /* Adjusted for mobile */
 }
 
@@ -382,7 +384,15 @@ h4 {
 .linktag {
     font-size: 20px; /* Adjusted for mobile */
 }
-
+#description{
+    font-size: 16px;
+}
+#userpp{
+    margin-top: 1.5em;
+}
+.linktag{
+    font-size: 20px;
+}
 
 }
 
